--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -17,7 +17,9 @@
     ])
         ->prependStylesheet($this->basePath('assets/css/style.css'))
         ->prependStylesheet($this->basePath('assets/vendor/bootstrap/dist/css/bootstrap-theme.min.css'))
-        ->prependStylesheet($this->basePath('assets/vendor/bootstrap/dist/css/bootstrap.min.css')) ?>
+        ->prependStylesheet($this->basePath('assets/vendor/bootstrap/dist/css/bootstrap.min.css'))
+    //->prependStylesheet('')
+    ?>
 
     <!-- Scripts -->
     <?php echo $this->headScript()
@@ -34,5 +36,6 @@
     </footer>
 </div>
 <?php echo $this->inlineScript() ?>
+<script type="text/javascript" src="<?php echo $this->basePath('assets/js/bundle.js'); ?>"></script>
 </body>
 </html>
