--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,24 @@
 body {
-    background: teal;
+    background: transparent;
+}
+
+.comment {
+    background: #EAEAEA;
+    padding: 5px;
+    margin: 5px;
+}
+
+.comment h2 {
+    padding: 0 0 5px 0;
+    margin: 0;
+}
+
+.commentList {
+    padding: 5px;
+    margin: 5px;
+}
+
+.commentForm {
+    padding: 5px;
+    margin: 5px;
 }
