--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -15,20 +15,15 @@
                                 'type' => 'image/vnd.microsoft.icon',
                                 'href' => $this->basePath() . '/img/favicon.ico',
     ])
-        ->prependStylesheet($this->basePath('assets/css/style.css'))
-        ->prependStylesheet($this->basePath('assets/vendor/bootstrap/dist/css/bootstrap-theme.min.css'))
-        ->prependStylesheet($this->basePath('assets/vendor/bootstrap/dist/css/bootstrap.min.css'))
-    //->prependStylesheet('')
+        ->prependStylesheet($this->basePath('assets/css/style.css'));
     ?>
 
     <!-- Scripts -->
-    <?php echo $this->headScript()
-        ->prependFile($this->basePath('assets/vendor/bootstrap/dist/js/bootstrap.min.js'))
-        ->prependFile($this->basePath('assets/vendor/jquery/dist/jquery.min.js')); ?>
+    <?php echo $this->headScript(); ?>
 
 </head>
 <body>
-<div class="container">
+<div class="globalContainer">
     <?php echo $this->content; ?>
 </div>
 <?php echo $this->inlineScript() ?>
