--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,91 @@
 body {
-    background: transparent;
-    font-family: "Helvetica Neue, Helvetica, Liberation Sans, Arial, sans-serif";
+    background: #000;
+    color: #FFF;
+    font-family: "HelveticaNeue-UltraLight", sans-serif;
+    padding: 0;
+    margin: 0;
+    letter-spacing: 5px;
+    font-size: 10px;
+    -webkit-font-smoothing: antialiased;
+    text-rendering: geometricprecision;
+    zoom: .4;
 }
 
+.globalContainer {
+    width: 1080px;
+    height: 1920px;
+    border: 1px solid #CCC;
+}
+
+.componentContainerModule {
+    display: inline-block;
+    position: absolute;
+}
+
+.componentContainerModule h1 {
+
+    padding: 0;
+    margin: 0;
+}
+
+.componentClock {
+
+}
+
+.componentClock span.date {
+    font-family: "HelveticaNeue-Medium", sans-serif;
+    display: block;
+    font-size: 40px;
+}
+
+.componentClock span.time {
+    font-family: "HelveticaNeue-Medium", sans-serif;
+    font-size: 200px;
+}
+
+.componentCompliment {
+    font-size: 100px;
+}
+
+.dim {
+    color: #333;
+}
+
+@font-face {
+    font-family: 'HelveticaNeue-UltraLight';
+    src: url('../fonts/HelveticaNeue-UltraLight.eot');
+    /* IE9 Compat Modes */
+    src: url('../fonts/HelveticaNeue-UltraLight.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../fonts/HelveticaNeue-UltraLight.woff') format('woff'), /* Modern Browsers */
+    url('../fonts/HelveticaNeue-UltraLight.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('../fonts/HelveticaNeue-UltraLight.svg#9453ea8da727d260bcdbfa605bdbb5d2') format('svg');
+    /* Legacy iOS */
+    font-style: normal;
+    font-weight: 100;
+}
+
+@font-face {
+    font-family: 'HelveticaNeue-Medium';
+    src: url('../fonts/HelveticaNeue-Medium.eot');
+    /* IE9 Compat Modes */
+    src: url('../fonts/HelveticaNeue-Medium.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../fonts/HelveticaNeue-Medium.woff') format('woff'), /* Modern Browsers */
+    url('../fonts/HelveticaNeue-Medium.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('../fonts/HelveticaNeue-Medium.svg#d7af0fd9278f330eed98b60dddea7bd6') format('svg');
+    /* Legacy iOS */
+    font-style: normal;
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: 'HelveticaNeue-Light';
+    src: url('../fonts/HelveticaNeue-Light.eot');
+    /* IE9 Compat Modes */
+    src: url('../fonts/HelveticaNeue-Light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../fonts/HelveticaNeue-Light.woff') format('woff'), /* Modern Browsers */
+    url('../fonts/HelveticaNeue-Light.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('../fonts/HelveticaNeue-Light.svg#7384ecabcada72f0e077cd45d8e1c705') format('svg');
+    /* Legacy iOS */
+    font-style: normal;
+    font-weight: 200;
+}
