Improved readme. Started work on weather widget. Rethinking API methods

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -20,6 +20,7 @@ body {
 .componentContainerModule {
     display: inline-block;
     position: absolute;
+    background: #2ca02cEE;
 }
 
 .componentContainerModule h1 {
