Animation. Working towards reusable weather hydrator

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -15,7 +15,8 @@
                                 'type' => 'image/vnd.microsoft.icon',
                                 'href' => $this->basePath() . '/img/favicon.ico',
     ])
-        ->prependStylesheet($this->basePath('assets/css/style.css'));
+        ->prependStylesheet($this->basePath('assets/css/style.css'))
+        ->prependStylesheet($this->basePath('assets/css/animations.css'));
     ?>
 
     <!-- Scripts -->
