--- a/public/assets/css/animations.css
+++ b/public/assets/css/animations.css
@@ -3,11 +3,11 @@
 }
 .fade-enter.fade-enter-active {
     opacity: 1;
-    transition: opacity .5s ease-in;
+    transition: opacity .2s linear;
 }
 .fade-leave {
-    transition: opacity .5s ease-out;
-    opacity: 1.0;
+    transition: opacity .3s linear;
+    opacity: 1;
 }
 .fade-leave.fade-leave-active {
     opacity: 0.01;
