--- a/public/assets/css/animations.css
+++ b/public/assets/css/animations.css
@@ -1,13 +1,16 @@
 .fade-enter {
     opacity: 0.01;
+    position: absolute;
 }
 .fade-enter.fade-enter-active {
     opacity: 1;
     transition: opacity .2s linear;
+
 }
 .fade-leave {
     transition: opacity .3s linear;
     opacity: 1;
+
 }
 .fade-leave.fade-leave-active {
     opacity: 0.01;
