--- a/public/assets/css/weather.css
+++ b/public/assets/css/weather.css
@@ -1,3 +1,31 @@
-.something {
+#componentweather {
+    position: absolute;
+    top: -45px;
+    right: 0;
+}
 
+/* Wind icons - center them and add padding */
+.wi {
+    line-height: 75px;
+    margin-right: .3em;
+}
+
+/* Todays weather block */
+#weatherTop .today {
+    display: block;
+}
+
+/* Big weather icon */
+#weatherTop .icon {
+    position: relative;
+    top: -10px;
+    display: inline-block;
+    font-size: 45px;
+    padding-right: 5px;
+    font-weight: 100;
+    margin-right: 10px;
+}
+
+.sun {
+    padding-left: 10px;
 }
